forgot password,chat,and sockets

--- a/package.json
+++ b/package.json
@@ -17,12 +17,12 @@
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^8.5.1",
     "morgan": "~1.9.1",
+    "nodemailer": "^6.7.5",
     "nodemon": "^2.0.16",
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.4",
     "pug": "2.0.0-beta11",
     "sequelize": "^6.19.0",
-    "sms-service": "^1.1.7",
     "socket.io": "^4.5.0"
   },
   "devDependencies": {
