--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "pg-hstore": "^2.3.4",
     "pug": "2.0.0-beta11",
     "sequelize": "^6.19.0",
-    "socket.io": "^4.5.0"
+    "socket.io": "^4.5.0",
+    "wbm": "^1.1.16"
   },
   "devDependencies": {
     "sequelize-cli": "^6.4.1"
