--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "username": "postgres",
-    "password": 20012021,
+    "password": "STEPAN15khachikyan",
     "database": "sport_db",
     "host": "127.0.0.1",
     "dialect": "postgres"
